force-app/main/default/objects/Checklist_Action__c/Checklist_Action__c.object-meta.xml
<CustomObject>
    <label>Checklist Action</label>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Checklist Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>