force-app/main/default/objects/Checklist_Action__c/fields/Action_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Action_Timestamp__c</fullName>
    <label>Action Timestamp</label>
    <type>DateTime</type>
</CustomField>