force-app/main/default/objects/Checklist_Action__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Checklist Actions</relationshipLabel>
    <relationshipName>Checklist_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>