force-app/main/default/objects/Checklist_Action__c/fields/Checklist_Item__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Item</label>
    <referenceTo>Checklist_Items__c</referenceTo>
    <relationshipLabel>Checklist Actions</relationshipLabel>
    <relationshipName>Checklist_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>